[metadata]
name = kabbes_cryptography
version = 0.1.0
author = James Kabbes
author_email = james.kabbes@gmail.com
description = Unnamed repository; edit this file 'description' to name the repository.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://pypi.org/project/kabbes-cryptography
project_urls =
    GitHub = https://github.com/jameskabbes/kabbes_cryptography
    Documentation = https://jameskabbes.github.io/cryptography
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src